<resources>
    <string name="app_name">gwu-explorer</string>
    <!-- Strings related to login -->
    <string name="start">Start:</string>
    <string name="destination">Destination:</string>
    <string name="end">End:</string>
    <string name="foggybottom">Foggy Bottom</string>
    <string name="remember">Remember</string>
    <string name="go">Go</string>
    <string name="alerts">Alerts</string>

    <string name="dialogopen">Welcome</string>
    <string name="dialogdesc">Please enter a location to travel to from Foggy Bottom.
    The Alerts button can be used to view Metro Outages.
    *Currently only works for non-transfer lines.</string>
    <string name="ok">OK</string>

    <string name="share">Share</string>
    <string name="drive">Driving Instructions</string>

    <string name="yourline">Your Line:</string>
    <string name="ok2">OK</string>
</resources>
