<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:id="@+id/title">

    <TextView
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/starttext" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="16sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/destination"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/destination" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/endtext" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/foggybottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startlocation"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/starttext"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"/>
    <TextView
            android:text="@string/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endtext" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/startlocation" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="16sp"/>
    <CheckBox
            android:text="@string/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember" app:layout_constraintStart_toEndOf="@+id/destination"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/endtext" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
    <Button
            android:enabled="false"
            android:text="@string/go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gobutton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/endtext"/>
    <Button
            android:text="@string/alerts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/alertsbutton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gobutton"/>
</android.support.constraint.ConstraintLayout>